--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   json_annotation: ^4.8.0
   go_router: ^6.2.0
   provider: ^6.0.5
+  table_calendar: ^3.0.8
 
 dev_dependencies:
   flutter_test:
