--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   provider: ^6.0.5
   table_calendar: ^3.0.8
   intl: ^0.17.0
+  flutter_datetime_picker: ^1.5.1
 
 dev_dependencies:
   flutter_test:
